--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,33 @@
 <html>
   <head>
     <title>SlackOverflow</title>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <%= csrf_meta_tags %>
 
+    <%= javascript_include_tag 'ckeditor/ckeditor.js' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+  <footer>
+  <script
+        type="text/javascript">$(document).ready(function() {
+          if ($('textarea').length > 0) {
+              var data = $('textarea');
+              $.each(data, function(i) {
+                  CKEDITOR.replace(data[i].id);
+              });
+          }
+      });
+</script>
+</footer>
   <body>
+
+  <nav>
+  <% if current_user %>
+
+    <%= link_to current_user.user_name, user_path(current_user.id) %>
+    <% end %>
+  </nav>
     <%= yield %>
   </body>
 </html>
